--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
   margin: 30px auto;
   background-color: #ddd;
   display: grid;
-  grid-template-columns: max-content 1fr 1fr min-content;
-  width: 90%;
   grid-template-rows: repeat(2, minmax(150px, min-content));
-  grid-template-columns: minmax(200px, 1fr) repeat(3, 1fr); }
+  grid-template-columns: repeat(auto-fit, 100px);
+  width: 90%;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-auto-rows: 150px; }
   .container .item {
     padding: 20px;
     color: white;
